# sastra-bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  config.py  help.py  main.py  memory.py  parse_vedabase.py  pyproject.toml  requirements.txt  sastrabot.py  statiscics.py  users.py
config/: config.py
